Bug 307519 - Klicking the searchbar does not remove focus from message list
Summary: Klicking the searchbar does not remove focus from message list
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.9.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-28 10:11 UTC by qqqqqqqqq9
Modified: 2012-09-28 13:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2012-09-28 10:11:18 UTC
Please look at the Steps to reproduce.

Reproducible: Always

Steps to Reproduce:
1. click an email in message list
2. click into search field
3. Filter for some string in the subject of the clicked email
4. hit enter
Actual Results:  
the selected email is opened in a separate window

Expected Results:  
nothing, 
Reasoning: consistency: In many search fields all over the web hitting "ENTER" means "start searching". 
Using it for opening the highlighted emails leads to many involuntary email-openings (at least for me)
Comment 1 Laurent Montel 2012-09-28 11:10:59 UTC
I confirm it.
Fixed now
Comment 2 Laurent Montel 2012-09-28 11:11:40 UTC
Git commit d3a706d05a6063717a78e694182323b92a07a546 by Montel Laurent.
Committed on 28/09/2012 at 13:11.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 307519 - Klicking the searchbar does not remove focus from

message list
FIXED-IN: 4.9.2

M  +1    -1    kmail/kmmainwidget.cpp
M  +8    -0    messagelist/core/widgetbase.cpp
M  +2    -0    messagelist/core/widgetbase.h
M  +9    -0    messagelist/pane.cpp
M  +2    -0    messagelist/pane.h
M  +0    -1    messagelist/widget.cpp

http://commits.kde.org/kdepim/d3a706d05a6063717a78e694182323b92a07a546
Comment 3 qqqqqqqqq9 2012-09-28 13:54:52 UTC
Wow, 1 hour from reporting to fixing :D
Thanks!