Fix Bug 307519 - Klicking the searchbar does not remove focus from

message list
FIXED-IN: 4.9.2
BUG: 307519