kmmainwidget.cpp
@@ -2900,7 +2900,7 @@ void KMMainWidget::slotSelectPreviousUnreadMessage()
 
 void KMMainWidget::slotDisplayCurrentMessage()
 {
-  if ( mMessagePane->currentItem().isValid() )
+  if ( mMessagePane->currentItem().isValid() && !mMessagePane->searchEditHasFocus() )
     slotMessageActivated( mMessagePane->currentItem() );
 }
 
