messagelist/pane.cpp
@@ -937,4 +937,13 @@ void Pane::updateTagComboBox()
 }
 
 
+bool Pane::searchEditHasFocus() const
+{
+  Widget *w = static_cast<Widget*>( currentWidget() );
+  if ( w )
+    return w->searchEditHasFocus();
+  return false;
+}
+
+
 #include "pane.moc"
